// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Backgrounds Example 1 1`] = `
<button
  class="button"
>
  You should be able to switch backgrounds for this story
</button>
`;

exports[`Storyshots Addons|Backgrounds Example 2 1`] = `
<button
  class="button"
>
  This one too!
</button>
`;
